# piano-sensor

./: .gitmodules  README.md
3D/: blackpill_mcu_board.SLDPRT  encoder-breakout-left.SLDPRT  encoder-breakout-right.SLDPRT  main-board.SLDPRT  makeblock_bracket_3x3.SLDPRT  makeblock_slide_beam_0824-224.SLDPRT  piano.SLDASM  piano_base.SLDPRT  piano_key.SLDPRT  uart-adapter.SLDPRT
app/: Pipfile  analysis.py  app.py  comports.py  logger.py  mainview.py  parse.py  serialmanager.py  settings.py  status.py  tools.py  views.py
encoder-breakout/: encoder-breakout-cache.lib  encoder-breakout-frame.kicad_pcb  encoder-breakout-left.kicad_pcb  encoder-breakout-left.sch  encoder-breakout-right.kicad_pcb  encoder-breakout.pro  encoder-breakout.sch
firmware/: .gitignore  Cargo.toml  README.md  openocd.cfg
firmware-rtfm/: Cargo.toml  README.md  bmp.gdb
firmware-rtfm/.cargo/: config
firmware-rtfm/src/: encoder.rs  main.rs
firmware/.cargo/: config
firmware/src/: counter.rs  encoder.rs  main.rs
firmware/tools/: bmp.gdb  jtag-lock-pick_tiny2_swd.cfg  openocd.gdb
main-board/: main-board-cache.lib  main-board.kicad_pcb  main-board.pro  main-board.sch
uart-adapter/: .gitignore  uart-adapter-cache.lib  uart-adapter.kicad_pcb  uart-adapter.pro  uart-adapter.sch
