[package]
authors = ["Ingmar Jager <ingmarjager@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "firmware-rtfm"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.1"
panic-halt = "0.2.0"
nb = "0.1.2"
heapless = "0.5.1"

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
# version = "0.5.0"
path = "./stm32f1xx-hal"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "firmware-rtfm"
test = false
bench = false

[profile.dev]
opt-level = 1
debug = true
# codegen-units = 1 # better optimizations
# lto = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 1