[package]
authors = ["Jitter <info@jitter.company>"]
edition = "2018"
readme = "README.md"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
heapless = "0.5.1"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.num]
version ="0.2.0"
default-features = false

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.4.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.panic-halt]
version = "0.2.0"
optional = true

[dependencies.panic-semihosting]
version = "0.5.3"
optional = true

[features]
default = ["panic-halt"]
use_semihosting = ["panic-semihosting"]

# this lets you use `cargo fix`!
[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
debug = true
lto = false
opt-level = 0